# rstream

./: Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  build.sh
frontend/src/: lib.rs  peer.rs  webrtc.rs
src/: index.html  main.rs
