[package]
name = "common"
version = "0.1.0"
authors = ["n4074 <n4074@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = "*"
