[package]
name = "frontend"
version = "0.1.0"
authors = ["n4074 <n4074@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
anyhow = "*"
js-sys = "*"
thiserror = "*"
wasm-bindgen-futures = "*"
serde_json = "*"

common = { path = "../common" }

[dependencies.web-sys]
version = "*"
features = [ 
    "RtcPeerConnection",
    "MessageEvent",
    "RtcPeerConnectionIceEvent",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate"
]