[package]
name = "frontend"
version = "0.1.0"
authors = ["n4074 <n4074@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yewtil = { version = "*", features = ["future"]}
wasm-bindgen = "0.2.67"
wasm-logger = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_error" ] }
console_error_panic_hook = "*"
anyhow = "*"
js-sys = "*"
thiserror = "*"
wasm-bindgen-futures = "*"
serde_json = "*"
uuid = { version = "*", features = ["serde", "v4"] }
futures = "*"

common = { path = "../common" }

[dependencies.web-sys]
version = "*"
features = [ 
    "RtcPeerConnection",
    "MessageEvent",
    "RtcPeerConnectionIceEvent",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcIceCandidateInit",
    "RtcIceCandidate",
    "Window",
    "Navigator",
    "MediaDevices",
    "MediaStreamConstraints",
]